--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         @font-face {
             font-family: 'Ben';
             src: url('/fonts/Benaiah.otf') format('opentype'),
-                 url('/fonts/Benaiah.ttf') format('truetype');
+                url('/fonts/Benaiah.ttf') format('truetype');
             font-weight: 400;
             font-style: normal;
             font-display: swap;
@@ -24,7 +24,7 @@
         @font-face {
             font-family: 'Kefa';
             src: url('/fonts/Kefa-Regular.ttf') format('truetype'),
-                 url('/fonts/Keffa.ttf') format('truetype');
+                url('/fonts/Keffa.ttf') format('truetype');
             font-weight: 400;
             font-style: normal;
             font-display: swap;
@@ -36,7 +36,8 @@
             --font-heading: 'Ben', 'Kefa', system-ui, -apple-system, sans-serif;
         }
 
-        html, body {
+        html,
+        body {
             font-family: var(--font-main) !important;
         }
 
@@ -68,12 +69,12 @@
   }
 }
 </script>
-    <link rel="stylesheet" href="/index.css">
+
 </head>
 
 <body class="bg-slate-50 text-slate-900 transition-colors duration-500 ease-in-out">
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
 </body>
 
 </html>
