--- a/index.html
+++ b/index.html
@@ -56,15 +56,12 @@
 
         /* Better dark mode transitions */
         html.dark body {
-            background-color: #0f172a;
+            background-color: #0a0a0f;
         }
     </style>
-
-
-
 </head>
 
-<body class="bg-slate-50 text-slate-900 transition-colors duration-500 ease-in-out">
+<body class="text-slate-900 transition-colors duration-500 ease-in-out">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
 </body>
