--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <title>✝️ የጥምቀት መዝሙሮች ስብስብ | ቦሌ ደብረ ሳሌም</title>
+    <title>የጥምቀት መዝሙሮች ስብስብ | ቦሌ ደብረ ሳሌም</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
